# consumper_product_research

./: README.md  pyproject.toml  report.md
src/consumer_product_research/: crew.py  main.py
src/consumer_product_research/config/: agents.yaml  tasks.yaml
