[project]
name = "consumer_product_research"
version = "0.1.0"
description = "consumer_product_research using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.83.0,<1.0.0"
]

[project.scripts]
consumer_product_research = "consumer_product_research.main:run"
run_crew = "consumer_product_research.main:run"
train = "consumer_product_research.main:train"
replay = "consumer_product_research.main:replay"
test = "consumer_product_research.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
